2.5.4 - Added display of Discord custom Emoji - Added Custom and Unicode Emoji input suggestions. To display suggestions, type ":" in the input field - Renamed "translateUnicodeEmojisToTextAliases" in the client config to "emojifulCompatibility". When enabled, it will disable the built-in custom emoji rendering and input suggestions, allowing full integration with the Emojiful mod - Changed Discord mention suggestions sorting from alphabetical to the same order as in Discord - Spoiler images in chat - Ability to send a screenshot as a spoiler (Hold Shift while sending) - Added display of messages above the hotbar when sending a screenshot - fr_fr locale by @Nenyoko